# camera_view

./: .gitignore  LICENSE.md  README.md  pyproject.toml
apps/: app.py
apps/detector/: views.py
apps/detector/templates/detector/: base.html
