[tool.poetry]
name = "camera-view"
version = "0.1.0"
description = ""
authors = ["TaikiIwahori <hmyrwjj@yahoo.co.jp>"]
license = "MIT"
readme = "README.md"
packages = [{include = "camera_view"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.7.5"
attrs = "21.2.0"
black = "^23.3.0"
coverage = "6.2"
dnspython = "2.1.0"
email-validator = "1.1.3"
flake8 = "^6.0.0"
flask = "^2.3.2"
flask-debugtoolbar = "0.11.0"
flask-login = "^0.6.2"
flask-mail = "0.9.1"
flask-migrate = "3.1.0"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.0.0"
idna = "3.3"
iniconfig = "1.1.1"
isort = "5.10.1"
itsdangerous = "^2.1.2"
mako = "1.1.6"
mypy = "^1.3.0"
pathspec = "0.9.0"
platformdirs = "2.4.0"
pluggy = "1.0.0"
py = "1.11.0"
pyparsing = "3.0.6"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
python-dotenv = "0.19.2"
sqlalchemy = "^2.0.15"
toml = "0.10.2"
tomli = "1.2.3"
werkzeug = "^2.3.6"
wtforms = "3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
